[package]
name = "dbdump"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "mysql", "offline", "macros", "bigdecimal"  ] }
async-std = { version = "1", features = [ "attributes" ] }
clap = { version = "4.2.1", features = ["derive", "env"] }
chrono = "0.4.24"
