[package]
name = "dbdump"
version = "0.4.1"
  edition = "2021"
author = "William Cherry (wcherry69@gmail.com)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "mysql", "offline", "macros", "bigdecimal", "chrono"  ] }
async-std = { version = "1", features = [ "attributes" ] }
clap = { version = "4.2.1", features = ["derive", "env"] }
url="2.3.1"
regex = "1.7.3"
